--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="viewport" content= "width=device-width, user-scalable=no">
     <!-- An app icon should be provided for PWA support -->
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
     <title>Residential v1.0</title>
